--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
   Project: 2025 Game Off Waves Jam
-  Author: JEMScape.Art
+  Author: nyaPaka
   Year: 2025
 
   SPDX-License-Identifier: MPL-2.0
